fix: fix main-nav--no-js css style, logo covers menu items

--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -136,6 +136,10 @@
   }
 
   .main-nav--no-js {
+    position: relative;
+    z-index: 1;
+    padding-top: 84px;
+
     .main-nav__button {
       display: none;
     }
